--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Cartão de memória</title>
 </head>
 <body>
+    <main>
+        <section id="container">
+            <article class="cartao"></article>
+        </section>
+    </main>
         <footer>
             <p>Projeto desenvolvido por Franciele França durante as aulas de programação.</p>
         </footer>
