cartao.conteudo.pergunta.resposta

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <main>
         <section id="container">
             <article class="cartao"></article>
-       
+             <div class="cartao__conteudo">
+              <h3>PROGRAMAÇÃO</h3>
+            <div class="cartao__conteudo__pergunta"> 
+
+            </div>
+            <div class="cartao__conteudo__resposta"> 
+
+            </div>
+          </div>
         </section>
-    </main>
+       </main>
         <footer>
             <p>Projeto desenvolvido por Franciele França durante as aulas de programação.</p>
         </footer>
