--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 <body>
     <main>
         <section id="container">
-            <article class="cartao"></article>
-             <div class="cartao__conteudo">
-              <h3>PROGRAMAÇÃO</h3>
-            <div class="cartao__conteudo__pergunta"> 
-
-            </div>
-            <div class="cartao__conteudo__resposta"> 
-
-            </div>
-          </div>
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                    <h3>PROGRAMAÇÃO</h3>
+                    <div class="cartao__conteudo__pergunta"> 
+                    
+                    </div>
+                    <div class="cartao__conteudo__resposta"> 
+        
+                    </div>
+                </div>
+            </article>  
         </section>
-       </main>
-        <footer>
-            <p>Projeto desenvolvido por Franciele França durante as aulas de programação.</p>
-        </footer>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Franciele França durante as aulas de programação.</p>
+    </footer>
 </body>
 </html>
